--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ html {
     font-family: 'Titillium Web', sans-serif;;
   }
   
-  
+/*  
 @media screen and (max-width: 768px) {
     .HP-navigation ul {
           flex-direction: column;
@@ -59,7 +59,6 @@ html {
   }
 
   button {
-    /* Variables */
     --button_radius: 0.75em;
     --button_color: #e8e8e8;
     --button_outline_color: #000000;
@@ -100,19 +99,117 @@ html {
   }
 
   button:hover .button_top {
-    /* Pull the button upwards when hovered */
+    /* Pull the button upwards when hovered */ /*
     transform: translateY(-0.33em);
   }
 
   button:active .button_top {
-    /* Push the button downwards when pressed */
+    /* Push the button downwards when pressed */ /*
     transform: translateY(0);
   }
 
+*/
 
 /* Score Submission Form */
+.score-submit-body {
+  background-color: #4caf50;
+  background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='0 0 40 40' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%23007c13' fill-opacity='0.19' fill-rule='evenodd'%3E%3Cpath d='M0 40L40 0H20L0 20M40 40V20L20 40'/%3E%3C/g%3E%3C/svg%3E");
+  opacity: 0.8;
+}
+.submission-header{
+  font-size: 5rem;
+  text-align: center;
+  font-weight: 700;
+  letter-spacing: 3px;
+  word-spacing: 5px;
+  background: #ffffff;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='32' viewBox='0 0 16 32'%3E%3Cg fill='%23c4c3c6' fill-opacity='0.31'%3E%3Cpath fill-rule='evenodd' d='M0 24h4v2H0v-2zm0 4h6v2H0v-2zm0-8h2v2H0v-2zM0 0h4v2H0V0zm0 4h2v2H0V4zm16 20h-6v2h6v-2zm0 4H8v2h8v-2zm0-8h-4v2h4v-2zm0-20h-6v2h6V0zm0 4h-4v2h4V4zm-2 12h2v2h-2v-2zm0-8h2v2h-2V8zM2 8h10v2H2V8zm0 8h10v2H2v-2zm-2-4h14v2H0v-2zm4-8h6v2H4V4zm0 16h6v2H4v-2zM6 0h2v2H6V0zm0 24h2v2H6v-2z'/%3E%3C/g%3E%3C/svg%3E");
+}
 
 .score-form {
   display: grid;
-  grid-template: repeat(10, 200px) / repeat(2, 200px);
+  grid-template: repeat(20, 1fr) / repeat(1, 1fr);
+  justify-content: center;
+  margin: 15px 5px 0 5px;
+  justify-items: center;
+  align-content: center;
+  align-items: center;
+  padding: 0 3%;
+}
+
+.submission-label {
+  font-size: 3.4rem;
+  font-weight: 700;
+}
+
+.submission-dd {
+  margin-left: 15px;
+  width: 130px;
+  height: 25px;
+}
+
+.num-input {
+  margin-left: 15px;
+  height: 25px;
+  font-size: 1.5rem;
+  width: 65px;
+  outline: 0;
+}
+
+.submission-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.submission-container-dd {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.submission-container,
+.submission-container-dd {
+  padding: 15px 5px;
+  justify-content: center;
+}
+
+.button--score {
+  background-color: solid #fff;
+  width: 300px;
+  height: 50px;
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+.button--score:hover {
+  background-color: darkgreen;
+  transition: background-color 0.25s ease;
+
+}
+
+.button--submit,
+.button--clear {
+  padding: 10px;
+}
+
+@media screen and (min-width: 768px) {
+  .score-form {
+    grid-template: repeat(10, 1fr) / repeat(2, 1fr);
+  }
+  .submission-container,
+  .submission-container-dd {
+    justify-self: auto;
+  }
+  .submission-label {
+    font-weight: 700;
+  }
+  .grid-item-left {
+    justify-self: end;
+    margin-right: 80px;
+  }
+  
+  .grid-item-right {
+    justify-self: end;
+  }
 }
