--- a/css/styles.css
+++ b/css/styles.css
@@ -187,111 +187,6 @@ a {
     font-size: 1.2rem;
   }
 }
-/*  
-@media screen and (max-width: 768px) {
-    .HP-navigation ul {
-          flex-direction: column;
-    }
-    .HP-navigation button {
-      margin: 0.5rem 0;
-    }
-
-    .HP-items li:first-child {
-        margin-right: 0;
-      }
-  }
-
-
-
-
-  .HP-navigation {
-    padding: 0.1rem;
-    background: #ffffff;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='32' viewBox='0 0 16 32'%3E%3Cg fill='%23c4c3c6' fill-opacity='0.31'%3E%3Cpath fill-rule='evenodd' d='M0 24h4v2H0v-2zm0 4h6v2H0v-2zm0-8h2v2H0v-2zM0 0h4v2H0V0zm0 4h2v2H0V4zm16 20h-6v2h6v-2zm0 4H8v2h8v-2zm0-8h-4v2h4v-2zm0-20h-6v2h6V0zm0 4h-4v2h4V4zm-2 12h2v2h-2v-2zm0-8h2v2h-2V8zM2 8h10v2H2V8zm0 8h10v2H2v-2zm-2-4h14v2H0v-2zm4-8h6v2H4V4zm0 16h6v2H4v-2zM6 0h2v2H6V0zm0 24h2v2H6v-2z'/%3E%3C/g%3E%3C/svg%3E");
-  }
-
-  .HP-navigation ul {
-    font-size: 2rem;
-    font-weight: 700;
-    display: flex;
-    list-style: none;
-    text-align: center;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-  }
-
-  .HP-navigation a {
-    color: black;
-    text-decoration: none;
-  }
-  .HP-items li:first-child {
-    margin-right: auto;
-  }
-
-  .HP-items button {
-    margin-right: 40px;
-  }
-
-  .HP-items button:last-of-type {
-    margin-right: 10px;
-  }
-
-  .nav-img {
-    width: 14rem;
-  }
-
-  button {
-    --button_radius: 0.75em;
-    --button_color: #e8e8e8;
-    --button_outline_color: #000000;
-    font-size: 1.8rem;
-    font-weight: bold;
-    border: none;
-    border-radius: var(--button_radius);
-    background: var(--button_outline_color);
-  }
-
-  .button_top {
-    display: block;
-    width: auto;
-    box-sizing: border-box;
-    border: solid var(--button_outline_color);
-    border-radius: var(--button_radius);
-    padding: 0.75em 1.5em;
-    background: var(--button_color);
-    color: var(--button_outline_color);
-    transform: translateY(-0.2em);
-    transition: transform 0.1s ease;
-  }
-
-  .EAS {
-    margin: auto -3.7%;
-  }
-
-  .S2HP {
-    margin: auto -2.8%;
-  }
-
-  .S1HP {
-    margin: auto -2.9%;
-  }
-
-  .PB {
-    margin: auto -2.9%;
-  }
-
-  button:hover .button_top {
-    /* Pull the button upwards when hovered */ /*
-    transform: translateY(-0.33em);
-  }
-
-  button:active .button_top {
-    /* Push the button downwards when pressed */ /*
-    transform: translateY(0);
-  }
-
-*/
 
 /* Score Submission Form */
 .score-submit-body {
@@ -690,7 +585,7 @@ p {
   }
 
   h2 {
-    font-size: 4rem;
+    font-size: 7rem;
   }
 
   h3 {
@@ -831,6 +726,11 @@ p {
   color: white;
   text-shadow: 2px 2px 4px #444444;
 }
+.seasons-header-tournametns {
+  font-size: 10rem;
+  margin-bottom: 25px;
+}
+
 @media screen and (min-width: 768px) {
   .feature:nth-of-type(even) .feature__content {
     order: 2;
@@ -857,7 +757,7 @@ p {
 }
 
 .feature__heading {
-  margin: 1rem 0;
+  margin: 1.5rem 0;
   color: white;
 
 }
@@ -871,4 +771,132 @@ p {
 
 .feature__content {
   color: white;
+}
+
+/*Tournaments video*/
+.header_video {
+  width: 100%;
+  height: 100%;
+}
+
+.button2 {
+  display: inline-block;
+  transition: all 0.2s ease-in;
+  position: relative;
+  overflow: hidden;
+  z-index: 1;
+  color: #090909;
+  padding: 0.7em 1.7em;
+  font-size: 18px;
+  border-radius: 0.5em;
+  background: #e8e8e8;
+  border: 1px solid #e8e8e8;
+  box-shadow: 1px 1px 12px #c5c5c5, -1px -1px 12px #ffffff;
+  margin: 0 auto;
+  display: block;
+}
+
+.button2:active {
+  color: #666;
+  box-shadow: inset 41px 4px 12px #c5c5c5, inset -4px -4px 12px #ffffff;
+}
+
+.button2:before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.25);
+  top: 100%;
+  width: 140%;
+  height: 180%;
+  background-color: rgba(0, 0, 0, 0.05);
+  border-radius: 50%;
+  display: block;
+  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
+}
+
+.button2:after {
+  content: "";
+  position: absolute;
+  left: 55%;
+  transform: translateX(-50%) scaleY(1) scaleX(1.45);
+  top: 180%;
+  width: 160%;
+  height: 190%;
+  background-color: #048324;
+  border-radius: 50%;
+  display: block;
+  transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+  z-index: -1;
+}
+
+.button2:hover {
+  color: #ffffff;
+  border: 1px solid #048324;
+}
+
+.button2:hover:before {
+  top: -35%;
+  background-color: #048324;
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
+
+.button2:hover:after {
+  top: -45%;
+  background-color: #048324;
+  transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+}
+.links {
+  text-decoration: none;
+  color: black;
+}
+
+/* Showcase Block */
+@media screen and (min-width: 768px) {
+  .block-showcase .grid {
+    grid-template-columns: 50% 50%;
+  }
+
+  .block-showcase__image {
+    justify-self: end;
+  }
+
+  .block-showcase__image > img {
+    border-radius: 10px;
+    width: 90%;
+    max-width: 700px;
+  }
+  .btn-left-intro {
+    float: left;
+  }
+}
+.block-showcase__image > img {
+  border-radius: 10px;
+  width: 90%;
+  max-width: 700px;
+}
+
+/* Media */
+.media {
+  display: flex;
+  margin-bottom: 4rem;
+}
+
+.media__title {
+  margin-top: 0;
+  font-size: 4rem;
+}
+
+.media__body {
+  margin: 0 2rem;
+  color: white;
+}
+
+.media__image {
+  margin-top: 1rem;
+}
+
+.btn-left {
+  float: left;
 }
