--- a/css/styles.css
+++ b/css/styles.css
@@ -407,6 +407,8 @@ a {
 /* Grids */
 .grid {
   display: grid;
+  justify-items: center;
+  align-content: center;
 }
 
 @media screen and (min-width: 768px) {
@@ -899,4 +901,42 @@ p {
 
 .btn-left {
   float: left;
+}
+
+/*GOTW- player bios*/
+@media screen and (min-width: 768px) {
+  .GOTW-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .GOTW-container .row {
+    display: grid;
+    grid-template-columns: 400px 100%;
+    justify-content: center; /* Horizontally centers the grid */
+    align-items: center;
+    margin-bottom: 20px; /* Adjust the margin between rows */
+    gap: 100px; /* Adjust the gap between video and photo */
+
+  }
+
+  .GOTW-container img {
+    width: 100%;
+    object-fit: contain;
+  }
+  .GOTW-container video {
+    width: 210%;
+    object-fit: contain;
+  }
+  img.gotwimages {
+    width: 300px;
+  }
+  .feature__image {
+    width: 100%;
+    border-radius: 10px;
+    margin-right: 40px;
+    padding: 0;
+    box-shadow: 3px 3px 5px 5px rgb(75, 111, 78);
+  }
 }
